added custom exceptions and test